src/test/ui/wf/hir-wf-check-erase-regions.stderr
error[E0277]: `&T` is not an iterator
  --> $DIR/hir-wf-check-erase-regions.rs:7:21
   |
LL |     type IntoIter = std::iter::Flatten<std::slice::Iter<'a, T>>;
   |                     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ `&T` is not an iterator
   |
   = help: the trait `Iterator` is not implemented for `&T`
   = help: the trait `Iterator` is implemented for `&mut I`
   = note: required for `&T` to implement `IntoIterator`
note: required by a bound in `Flatten`
  --> $SRC_DIR/core/src/iter/adapters/flatten.rs:LL:COL
   |
LL | pub struct Flatten<I: Iterator<Item: IntoIterator>> {
   |                                      ^^^^^^^^^^^^ required by this bound in `Flatten`

error[E0277]: `&T` is not an iterator
  --> $DIR/hir-wf-check-erase-regions.rs:10:27
   |
LL |     fn into_iter(self) -> Self::IntoIter {
   |                           ^^^^^^^^^^^^^^ `&T` is not an iterator
   |
   = help: the trait `Iterator` is not implemented for `&T`
   = help: the trait `Iterator` is implemented for `&mut I`
   = note: required for `&T` to implement `IntoIterator`
note: required by a bound in `Flatten`
  --> $SRC_DIR/core/src/iter/adapters/flatten.rs:LL:COL
   |
LL | pub struct Flatten<I: Iterator<Item: IntoIterator>> {
   |                                      ^^^^^^^^^^^^ required by this bound in `Flatten`

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0277`.
